--- a/project2-DataWarehouses/redshift_IaC.ipynb
+++ b/project2-DataWarehouses/redshift_IaC.ipynb
@@ -251,7 +251,6 @@
       "Attaching role...\n",
       "Role Attached...\n",
       "Getting role...\n",
-      "arn:aws:iam::049456562069:role/dwhRole\n"
      ]
     }
    ],
@@ -472,7 +471,7 @@
      "output_type": "stream",
      "text": [
       "DWH_ENDPOINT ::  dwhcluster.c9bowivkrlcx.us-west-2.redshift.amazonaws.com\n",
-      "DWH_ROLE_ARN ::  arn:aws:iam::049456562069:role/dwhRole\n"
+      "DWH_ROLE_ARN ::  "
      ]
     }
    ],
